Update TestGG.java